creating usertips controller

--- a/app/views/usertips/edit.html.erb
+++ b/app/views/usertips/edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(usertip) do |f| %>
+<%= simple_form_for(@usertip) do |f| %>
   <%= f.input :name %>
   <%= f.input :description%>
   <%= f.submit %>
