ajout des views bookings et correction validation

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -21,3 +21,4 @@
 </ul>
 
 <%# button à mettre pour ajouter ce challenge/create a booking %>
+<%= link_to "Add a booking", new_challenge_booking_path(@challenge) %>
