--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,8 +1,10 @@
 <%= simple_form_for [@challenge, @booking] do |f| %>
-  <%= f.input :goal, as: :range %>
-  <div class="form-check form-switch">
-    <%= f.input :status, as: :boolean, class: "form-check-input" %>
-  </div>
-  <%= f.button :submit %>
+  <% if @booking.persisted? %>
+    <div class="form-check form-switch">
+      <%= f.input :status, as: :boolean, class: "form-check-input" %>
+    </div>
+  <% else %>
+    <%= f.input :goal, as: :range %>
+  <% end %>
+  <%= f.submit "Add this challenge" %>
 <% end %>
-
