--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>EcoCoach</h1>
+
+<p>Get a coach & stay motivated to act on climate change!</p>
+
+<% if user_signed_in? %>
+  <%= link_to "Start the coaching", profile_path %>
+<% else %>
+  <%= link_to "Start the coaching", new_user_session_path %>
+<% end %>
+
+
+<h4>Ecology</h4>
+<h4>Challenges</h4>
+<h4>Tips</h4>
+
+<p>this is a carroussel</p>
