--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,10 +1,26 @@
+<h1>My profile</h1>
+<%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+<br>
+<br>
 
-<h1>My challenges</h1>
+<h2><%= current_user.username %></h2>
+<p>
+  Welcome againg <%= current_user.seniority.name %>!
+  <% if @next_seniority.nil? %>
+    <p>You are an amazing eco citizen! </p>
+  <% else %>
+    <p>You are on you way to become <%= @next_seniority %></p>
+  <% end %>
+</p>
+<br>
+<br>
 
+<h2>My challenges</h2>
 <%= link_to "Add new challenges", challenges_path %>
+<br>
+<br>
 
-<h3>On going challenges</h3>
-
+<h4>On going challenges</h4>
 <ol>
   <% @on_going_bookings.each do |booking| %>
     <li>
@@ -14,9 +30,10 @@
     </li>
   <% end %>
 </ol>
+<br>
+<br>
 
-<h3>Past challenges</h3>
-
+<h4>Past challenges</h4>
 <ol>
   <% @past_bookings.each do |booking| %>
     <li>
@@ -26,3 +43,7 @@
     </li>
   <% end %>
 </ol>
+<br>
+
+<h2>My Tips</h2>
+<%= link_to "Add a new tip", new_usertip_path %>
