--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,11 +1,4 @@
 <h1>My challenges </h1>
 
-<ol>
-  <% @bookings.each do |booking| %>
-    <li>
-      <p><%= booking.goal %></p>
-      <p>: <%= challenge.status %></p>
-      <p>week number: <%= challenge.weeknumber %></p><br>
-    </li>
-  <% end %>
-</ol>
+<%= render 'form', booking: @booking %>
+
