added pundit and added ranking column to seniority

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -9,7 +9,7 @@
   <% if @next_seniority.nil? %>
     <p>You are an amazing eco citizen! </p>
   <% else %>
-    <p>You are on you way to become <%= @next_seniority %></p>
+    <p>You are on you way to become <%= @next_seniority.name %></p>
   <% end %>
 </p>
 <br>
