--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,6 +9,29 @@
     <li><p>Description: <%= Challenge.find(@booking.challenge_id).description %></p></li>
     <li><p>My Goal: <%= @booking.goal %></p></li>
   </ul>
+
+  <h4>My saved Tips</h4>
+
+  <ul>
+    <% @saved_tips.each do |tip| %>
+      <li>
+        <%= tip.name %><br>
+        <%= tip.description %><br>
+        <%= link_to "Unsave this challenge", tip_saved_tips_path(tip), data: {turbo_method: :delete} %></li>
+    <% end %>
+  </ul>
+
+  <h4>Challenge Tips</h4>
+
+  <ul>
+    <% @tips.each do |tip| %>
+      <li>
+        <%= tip.name %><br>
+        <%= tip.description %><br>
+        <%= link_to "Save this challenge", tip_saved_tips_path(tip), data: {turbo_method: :post} %>    </li>
+    <% end %>
+  </ul>
+
 <% else %>
   <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
   <ul>
@@ -16,5 +39,26 @@
     <li><p>Description: <%= Challenge.find(@booking.challenge_id).description %></p></li>
     <li><p>My Goal: <%= @booking.goal %></p></li>
   </ul>
-<% end %>
 
+  <h4>My saved Tips</h4>
+
+  <ul>
+    <% @saved_tips.each do |tip| %>
+      <li>
+        <%= tip.name %><br>
+        <%= tip.description %><br>
+        <%= link_to "Unsave this challenge", tip_saved_tips_path(tip), data: {turbo_method: :delete} %></li>
+    <% end %>
+  </ul>
+
+  <h4>Challenge Tips</h4>
+
+  <ul>
+    <% @tips.each do |tip| %>
+      <li>
+        <%= tip.name %><br>
+        <%= tip.description %><br>
+        <%= link_to "Save this challenge", tip_saved_tips_path(tip), data: {turbo_method: :post} %>    </li>
+    <% end %>
+  </ul>
+<% end %>
