--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -12,14 +12,25 @@
     </li>
 </ul>
 
-<h4>Tips</h4>
+<h4>My saved Tips</h4>
+
+<ul>
+  <% @saved_tips.each do |tip| %>
+    <li>
+      <%= tip.name %><br>
+      <%= tip.description %><br>
+      <%= link_to "Unsave this challenge", tip_saved_tips_path(tip), data: {turbo_method: :delete} %></li>
+  <% end %>
+</ul>
+
+<h4>Challenge Tips</h4>
 
 <ul>
   <% @tips.each do |tip| %>
     <li>
       <%= tip.name %><br>
       <%= tip.description %><br>
-    </li>
+      <%= link_to "Save this challenge", tip_saved_tips_path(tip), data: {turbo_method: :post} %>    </li>
   <% end %>
 </ul>
 
