--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%# <%= render "shared/navbar" %>
-    <%# <%= render "shared/flashes" %>
+    <%= render "shared/flashes" %>
     <%= yield %>
   </body>
 </html>
