--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -15,11 +15,11 @@
 <h4>My saved Tips</h4>
 
 <ul>
-  <% @saved_tips.each do |tip| %>
+  <% @saved_tips.each do |saved_tip| %>
     <li>
-      <%= tip.name %><br>
-      <%= tip.description %><br>
-      <%= link_to "Unsave this challenge", tip_saved_tips_path(tip), data: {turbo_method: :delete} %></li>
+      <%= saved_tip.tip.name %><br>
+      <%= saved_tip.tip.description %><br>
+      <%= link_to "Unsave this challenge", saved_tip_path(saved_tip), data: {turbo_method: :delete} %></li>
   <% end %>
 </ul>
 
