--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,72 @@
-<div class='container'>
-  <div class='videoWrapper'>
-    <video id='background-image' width="509" height="286" frameborder="0" allowfullscreen="allowfullscreen" autoplay loop muted>
-      <%# <source src='https://player.vimeo.com/external/412137794.sd.mp4?s=96c9a5ba297546844da637bcffb67856031c86f2&profile_id=164&oauth2_token_id=57447761' type='video/mp4'> %>
-    </video>
-    <h1>EcoCoach</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1513836279014-a89f7a76ae86?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80);">
+  <div class='container'>
+    <div class="text-banner">
+      <h1>EcoCoach</h1>
 
-    <p>Get a coach & stay motivated to act on climate change!</p>
-
-    <% if user_signed_in? %>
-      <%= link_to "Start the coaching", profile_path %>
-    <% else %>
-      <%= link_to "Start the coaching", new_user_session_path %>
-    <% end %>
-
-
-    <h4>Ecology</h4>
-    <h4>Challenges</h4>
-    <h4>Tips</h4>
-
-    <p>this is a carroussel</p>
+      <p>Get a coach & stay motivated to act on climate change!</p>
+      <div class="btn btn-flat">
+        <% if user_signed_in? %>
+          <%= link_to "Start the coaching", profile_path %>
+        <% else %>
+          <%= link_to "Start the coaching", new_user_session_path %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
-
+<div class="container">
+  <div class="under-banner">
+    <div class="avatar-home">
+      <div class="d-inline-flex flex-column card-home">
+        <p><i class="fa-solid fa-tree"></i></p>
+        <h4><strong>Ecology</strong></h4>
+      </div>
+      <div class="d-inline-flex flex-column card-home">
+        <p><i class="fa-sharp fa-solid fa-medal"></i></p>
+        <h4><strong>Challenges</strong></h4>
+      </div>
+      <div class="d-inline-flex flex-column card-home">
+        <p><i class="fa-regular fa-lightbulb"></i></p>
+        <h4><strong>Tips</strong></h4>
+      </div>
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=6" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-md-block">
+            <%# <h5>Ecology</h5> %>
+            <p>Change your habits, for a better world.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="Second-slide">
+          <div class="carousel-caption d-md-block">
+            <%# <h5>You need Challenges</h5> %>
+            <p>You want to be a better human being, come here</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="Third-slide">
+          <div class="carousel-caption ">
+            <%# <h5>Need help</h5> %>
+            <p class="text-center">We have so many tips for you</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
