--- a/app/views/usertips/new.html.erb
+++ b/app/views/usertips/new.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for([@booking, @usertip]) do |f| %>
+<h1>Create a new tip</h1>
+
+<%= simple_form_for(@usertip) do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :booking_id, prompt: "Choose among your challenge", collection: @bookings.map{ |booking| [booking.id, booking.challenge.name] }, label_method: :second, value_method: :first %>
   <%= f.submit %>
 <% end %>
