--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -51,12 +51,31 @@
 <%= link_to "Create a new tip", new_usertip_path %>
 <%# <%= link_to "Save a new tip", ???aller vers l'index avec tous les tips du monde %>
 
+<h4>My saved tips</h4>
 
 <ol>
-  <% @my_tips.each do |tip| %>
+  <% @all_my_saved_tips.each do |tip| %>
     <li>
       <p><%= tip.name %></p>
       <p><%= tip.description %></p>
+      <% if tip.class == Tip %>
+        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %></li>
+      <% else tip.class == Usertip %>
+        <%= link_to "Unsave this tip", saved_user_tip_path(tip), data: {turbo_method: :delete} %></li>
+      <% end %>
+    </li>
+  <% end %>
+</ol>
+
+<h4>My created tips</h4>
+
+<ol>
+  <% @my_created_tips.each do |tip| %>
+    <li>
+      <p><%= tip.name %></p>
+      <p><%= tip.description %></p>
+      <%= link_to "Edit", edit_usertip_path(tip) %>
+      <%= link_to "Delete", usertip_path(tip), data: {turbo_method: :delete} %>
     </li>
   <% end %>
 </ol>
