--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,3 +33,7 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.carousel-item img {
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))
+}
