--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -14,18 +14,16 @@
     <li><p>My Goal: <%= @booking.goal %></p></li>
   </ul>
 
-  <h4>My saved Tips</h4>
+  <h4>Need some tips</h4>
 
   <ul>
-    <% @saved_tips.each do |save_tip| %>
+    <% @all_saved_tips.each do |tip| %>
       <li>
-        <%= save_tip.tip.name %><br>
-        <%= save_tip.tip.description %><br>
-        <%= link_to "Unsave this tip", saved_tip_path(save_tip), data: {turbo_method: :delete} %></li>
+        <%= tip.tip.name %><br>
+        <%= tip.tip.description %><br>
+        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %></li>
     <% end %>
   </ul>
-
-  <h4>Challenge Tips</h4>
 
   <ul>
     <% @tips.each do |tip| %>
