--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -24,15 +24,10 @@
 </ul>
 
 <ul>
-  <% @saved_tips.each do |saved_tip| %>
+  <% @all_saved_tips.each do |saved_tip| %>
     <li>
       <%= saved_tip.tip.name %><br>
       <%= saved_tip.tip.description %><br>
       <%= link_to "Unsave this tip", saved_tip_path(saved_tip), data: {turbo_method: :delete} %></li>
   <% end %>
 </ul>
-
-
-
-<%# button à mettre pour ajouter ce challenge/create a booking %>
-<%# <%= link_to "Add a booking", new_challenge_booking_path(@challenge) %>
