--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,15 +1,17 @@
-<%= simple_form_for [@challenge, @booking] do |f| %>
-  <% if @booking.persisted? %>
-    <div class="form-check form-switch">
-      <%= f.input :status, as: :boolean, class: "form-check-input", label: "Succeed" %>
-    </div>
-  <% else %>
-    <%= f.input :goal, as: :range %>
+<div class="container">
+  <%= simple_form_for [@challenge, @booking] do |f| %>
+    <% if @booking.persisted? %>
+      <div class="form-check form-switch">
+        <%= f.input :status, as: :boolean, class: "form-check-input", label: "Succeed" %>
+      </div>
+    <% else %>
+      <%= f.input :goal, as: :range %>
+    <% end %>
+    <% Time.now.strftime('%U') %>
+    <% if @booking.persisted? %>
+      <%= f.submit "Confirm the evaluation", class: "btn-grad"%>
+    <% else %>
+      <%= f.submit "Add this challenge" %>
+    <% end %>
   <% end %>
-  <% Time.now.strftime('%U') %>
-  <% if @booking.persisted? %>
-    <%= f.submit "Confirm the evaluation" %>
-  <% else %>
-    <%= f.submit "Add this challenge" %>
-  <% end %>
-<% end %>
+</div>
