--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -3,28 +3,16 @@
 <h4>My saved tips</h4>
 
 <ol>
-  <% @my_saved_user_tips.each do |tip| %>
+  <% @my_saved_tips.each do |saved_tip| %>
     <li>
-      <p><%= tip.name %></p>
-      <p><%= tip.description %></p>
-      <% if tip.class == Tip %>
-        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %></li>
-      <% else tip.class == Usertip %>
-        <%= link_to "Unsave this tip", saved_user_tip_path(tip), data: {turbo_method: :delete} %></li>
-      <% end %>
-    </li>
-  <% end %>
-</ol>
-
-<ol>
-  <% @my_saved_tips.each do |tip| %>
-    <li>
-      <p><%= tip.name %></p>
-      <p><%= tip.description %></p>
-      <% if tip.class == Tip %>
-        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %></li>
-      <% else tip.class == Usertip %>
-        <%= link_to "Unsave this tip", saved_user_tip_path(tip), data: {turbo_method: :delete} %></li>
+      <% if saved_tip.class == SavedTip %>
+        <%= saved_tip.tip.name %><br>
+        <%= saved_tip.tip.description %><br>
+        <%= link_to "Unsave this tip", saved_tip_path(saved_tip), data: {turbo_method: :delete} %>
+      <% else saved_tip.class == SavedUserTip %>
+        <%= saved_tip.usertip.name %><br>
+        <%= saved_tip.usertip.description %><br>
+        <%= link_to "Unsave this tip", saved_user_tip_path(saved_tip), data: {turbo_method: :delete} %>
       <% end %>
     </li>
   <% end %>
