--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -14,8 +14,21 @@
 
 <br>
 
-<% @tips.each do |tip|  %>
-<p><%= tip.name %></p>
-<p> <%= tip.description  %></p>
-<p> <%= tip.challenge.category  %></p>
-<% end %>
+<ol>
+  <% @tips.each do |tip|  %>
+    <li>
+      <p>Name: <%= tip.name %></p>
+      <p>Content: <%= tip.description  %></p>
+      <p>Challenge category: <%= tip.challenge.category  %></p>
+      <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+    </li>
+  <% end %>
+  <% @usertips.each do |tip|  %>
+    <li>
+      <p>Name: <%= tip.name %></p>
+      <p>Content: <%= tip.description  %></p>
+      <p>Challenge category: <%= tip.booking.challenge.category  %></p>
+      <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+    </li>
+  <% end %>
+</ol>
