--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -6,6 +6,10 @@
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .cardtips h5 {
@@ -14,14 +18,27 @@
 
 .tipsicon {
   color: #115549;
+  position: absolute;
+  right: 35px;
+  top: 546px;
 }
 
 .tipsimage {
-  font-size: 50px;
-  color: #115549;;
+  font-size: 40px;
+  color: #115549;
+  align-items: center;
+  padding-left: 30px;
 }
+
+ul {
+  margin-top: 10px;
+  margin-right: 25px;
+  padding-right: 20px;
+}
+
 .cardtips li {
   list-style: none;
+  align-items: center;
 }
 
 .tipsname {
