--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -26,16 +26,18 @@
 <h4>Challenge Tips</h4>
 
 <div class="cardtips">
+  <a class="tipsimage" href="#"><i class="fa-solid fa-lightbulb"></i></a>
   <ul>
     <% @tips.each do |tip| %>
       <li>
-        <a class="tipsimage" href="#"><i class="fa-solid fa-lightbulb"></i></a>
         <h5><strong><%= tip.name %></strong><br></h5>
-        <a class="tipsicon" href="#"><i class="fa-solid fa-circle-info"></i></a>
-        <%= tip.description %><br>
+        <p><%= tip.description.truncate(40) %></p>
         <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>    </li>
     <% end %>
   </ul>
+</div>
+<div class="info">
+  <a class="tipsicon" href="#"><i class="fa-regular fa-bookmark"></i></a>
 </div>
 
 <%# button à mettre pour ajouter ce challenge/create a booking %>
