--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,17 +1,22 @@
+<div class="container">
+  <br>
+
 <h1>My profile</h1>
-<%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
-<br>
-<br>
 
-<h2><%= current_user.username %></h2>
-<p>
-  Welcome againg <%= current_user.seniority.name %>!
-  <% if @next_seniority.nil? %>
-    <p>You are an amazing eco citizen! </p>
-  <% else %>
-    <p>You are on you way to become <%= @next_seniority.name %></p>
-  <% end %>
-</p>
+  <%# <a id="logout"></a><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+    <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+  <br>
 
-<%= link_to "Challenges", profile_challenge_path %>
-<%= link_to "Tips", profile_tips_path %>
+  <h2><%= current_user.username %></h2>
+  <p>
+    Welcome againg <%= current_user.seniority.name %>!
+    <% if @next_seniority.nil? %>
+      <p>You are an amazing eco citizen! </p>
+    <% else %>
+      <p>You are on you way to become <%= @next_seniority.name %></p>
+    <% end %>
+  </p>
+
+  <%= link_to "Challenges", profile_challenge_path %>
+  <%= link_to "Tips", profile_tips_path %>
+</div>
