--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -2,11 +2,13 @@
 
 <ol>
   <% @challenges.each do |challenge| %>
-    <li>
-      <p><%= challenge.name %> - <%= challenge.id %></p>
-      <p>category: <%= challenge.category %></p>
-      <p>description: <%= challenge.description %></p>
-      <%= link_to "details", challenge_path(challenge) %><br>
-    </li>
+    <% if current_user.bookings.where(challenge_id: challenge.id).empty? %>
+      <li>
+        <p><%= challenge.name %> - <%= challenge.id %></p>
+        <p>category: <%= challenge.category %></p>
+        <p>description: <%= challenge.description %></p>
+        <%= link_to "details", challenge_path(challenge) %><br>
+      </li>
+    <% end %>
   <% end %>
 </ol>
