--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -20,7 +20,11 @@
       <p>Name: <%= tip.name %></p>
       <p>Content: <%= tip.description  %></p>
       <p>Challenge category: <%= tip.challenge.category  %></p>
-      <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+      <% if current_user.saved_tips.where(tip: tip).empty? %>
+        <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+      <% else %>
+        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %>
+      <% end %>
     </li>
   <% end %>
   <% @usertips.each do |tip|  %>
@@ -28,7 +32,12 @@
       <p>Name: <%= tip.name %></p>
       <p>Content: <%= tip.description  %></p>
       <p>Challenge category: <%= tip.booking.challenge.category  %></p>
-      <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
+
+      <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
+        <%= link_to "Save this tip", usertip_saved_user_tips_path(tip), data: {turbo_method: :post} %>
+      <% else %>
+        <%= link_to "Unsave this tip", saved_user_tip_path(tip), data: {turbo_method: :delete} %>
+      <% end %>
     </li>
   <% end %>
 </ol>
