tout le back marche !!!!

--- a/app/views/shared/_navbar_eco.html.erb
+++ b/app/views/shared/_navbar_eco.html.erb
@@ -10,7 +10,7 @@
           <% end %>
         </li>
         <li class="nav-item me-3 me-lg-0">
-          <%= link_to challenges_path, class: "nav-link #{'current-page' if controller_name == 'challenges'}" do %>
+          <%= link_to profile_challenge_path, class: "nav-link #{'current-page' if controller_name == 'challenges'}" do %>
             <i class="fa-solid fa-dumbbell"></i>
           <% end %>
         </li>
