--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -15,6 +15,7 @@
 <br>
 
 <ol>
+<% if @tips %>
   <% @tips.each do |tip|  %>
     <li>
       <p>Name: <%= tip.name %></p>
@@ -23,21 +24,27 @@
       <% if current_user.saved_tips.where(tip: tip).empty? %>
         <%= link_to "Save this tip", tip_saved_tips_path(tip), data: {turbo_method: :post} %>
       <% else %>
-        <%= link_to "Unsave this tip", saved_tip_path(tip), data: {turbo_method: :delete} %>
+        <% st = current_user.saved_tips.select{ |st| st if st.tip_id == tip.id } %>
+        <%= link_to "Unsave this tip", saved_tip_path(st), data: {turbo_method: :delete} %>
       <% end %>
     </li>
   <% end %>
+  <% end %>
+  <% if @usertips %>
   <% @usertips.each do |tip|  %>
     <li>
       <p>Name: <%= tip.name %></p>
       <p>Content: <%= tip.description  %></p>
       <p>Challenge category: <%= tip.booking.challenge.category  %></p>
-
       <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
         <%= link_to "Save this tip", usertip_saved_user_tips_path(tip), data: {turbo_method: :post} %>
       <% else %>
-        <%= link_to "Unsave this tip", saved_user_tip_path(tip), data: {turbo_method: :delete} %>
+        <% sut = current_user.saved_user_tips.select{ |sut| sut if sut.usertip_id == tip.id } %>
+        <%= link_to "Unsave this tip", saved_user_tip_path(sut), data: {turbo_method: :delete} %>
       <% end %>
     </li>
   <% end %>
+
+  <% end %>
+
 </ol>
