boutons spéciaux ok

--- a/app/assets/stylesheets/components/_navbar_eco.scss
+++ b/app/assets/stylesheets/components/_navbar_eco.scss
@@ -17,3 +17,15 @@
 
   }
 }
+
+.up-nav {
+  position: fixed;
+  bottom: 50px;
+  background-color: white;
+}
+
+.up-nav2 {
+  position: fixed;
+  bottom: 70px;
+  background-color: white;
+}
