--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,18 +1,6 @@
 <h1><%= Challenge.find(@booking.challenge_id).name %></h1>
 
 
-<% if @booking.status == false %>
-  <% if policy(@booking).edit? %>
-    <%= render "bookings/form", bookings: @booking %>
-  <% end %>
-  <% if policy(@booking).destroy? %>
-    <%= link_to 'Remove this challenge', booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
-  <% end %>
-
-<% else %>
-  <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
-
-<% end %>
 
 <ul>
   <li><p>Category: <%= Challenge.find(@booking.challenge_id).category %></p></li>
@@ -52,3 +40,19 @@
     </li>
   <% end %>
 </ul>
+
+<div class="up-nav2">
+  <% if @booking.status == false %>
+    <% if policy(@booking).edit? %>
+      <%= render "bookings/form", bookings: @booking %>
+    <% end %>
+    <% if policy(@booking).destroy? %>
+     <i class="fa-regular fa-trash-can"></i>
+      <%= link_to 'Remove this challenge', booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
+    <% end %>
+
+  <% else %>
+    <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
+
+  <% end %>
+</div>
