--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,8 +18,8 @@
 
 .btn-grad {
   background-image: linear-gradient(to right, #115540 0%, #237A57  51%, #115540  100%);
-  margin: 10px;
-  padding: 15px 25px;
+  margin-top: 10px;
+  padding: 10px 20px;
   text-align: center;
   // transition: 0.5s;
   // background-size: 100% auto;
