--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,17 +1,21 @@
 <div class="container">
-  <%= simple_form_for [@challenge, @booking] do |f| %>
-    <% if @booking.persisted? %>
-      <div class="form-check form-switch">
-        <%= f.input :status, as: :boolean, class: "form-check-input", label: "Succeed" %>
-      </div>
-    <% else %>
-      <%= f.input :goal, as: :range %>
+  <ul class="list-inline">
+    <%= simple_form_for [@challenge, @booking], html:{class: "d-flex align-items-center"} do |f| %>
+    <li class="list-inline-item">
+      <% if @booking.persisted? %>
+        <div class="form-check form-switch">
+          <%= f.input :status, as: :boolean, class: "form-check-input", label: "Succeed" %>
+        </div></li>
+    <li class="list-inline-item">
+      <% else %>
+       <p><%= f.input :goal, as: :range %></p>
+      <% end %></li>
+      <% Time.now.strftime('%U') %>
+      <% if @booking.persisted? %>
+        <%= f.submit "Confirm the evaluation", class: "btn-grad"%>
+      <% else %>
+        <%= f.submit "Add this challenge", class: "btn-grad" %>
+      <% end %>
     <% end %>
-    <% Time.now.strftime('%U') %>
-    <% if @booking.persisted? %>
-      <%= f.submit "Confirm the evaluation", class: "btn-grad"%>
-    <% else %>
-      <%= f.submit "Add this challenge" %>
-    <% end %>
-  <% end %>
+  </ul>
 </div>
