--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,69 +1,66 @@
- <div class="container">
- <h1 class="text-center pt-3"><%= @challenge.name%></h1>
-
-  <%= render "bookings/form", bookings: @booking %>
+<div class="container">
+  <h1 class="text-center pt-3"><%= @challenge.name%></h1>
+    <%= render "bookings/form", bookings: @booking %>
   <br>
-
   <ul>
-      <li>
-        <p>category: <%= @challenge.category %></p>
-      </li>
-      <li>
-        <p>description: <%= @challenge.description %></p>
-      </li>
+    <li>
+      <p>category: <%= @challenge.category %></p>
+    </li>
+    <li>
+      <p>description: <%= @challenge.description %></p>
+    </li>
   </ul>
-
   <h4>Need some tips</h4>
-
-    <ul>
-      <% @tips.each do |tip| %>
-      <div class="cardtips">
-        <a class="tipsimage" href="#">
-          <i class="fa-solid fa-utensils"></i>
-        </a>
-        <li>
-          <div class="info d-flex justify-content-between">
-            <h5><strong><%= tip.name %></strong><br></h5>
-            <% if tip.class == Tip %>
-              <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
-                <i class="fa fa-bookmark"></i>
-              <% end %>
-            <% else tip.class == Usertip %>
-              <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
-                <i class="fa-regular fa-bookmark"></i>
-              <% end %>
-            <% end %>
-          </div>
-          <p><%= tip.description.truncate(50) %></p>
-        </li>
+  <ul>
+    <% @tips.each do |tip| %>
+    <div class="cardtips">
+      <a class="tipsimage" href="#">
+        <i class="fa-solid fa-utensils"></i>
+      </a>
+      <li>
+      <div class="info d-flex justify-content-between">
+        <h5><strong><%= tip.name %></strong><br></h5>
+        <% if tip.class == Tip %>
+          <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa-regular fa-bookmark"></i>
+          <% end %>
+        <% else tip.class == Usertip %>
+          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
+            <i class="fa-regular fa-bookmark"></i>
+          <% end %>
+        <% end %>
       </div>
+      <p><%= tip.description.truncate(50) %></p>
+      </li>
+    </div>
+    <% end %>
+  </ul>
+  <ul>
+    <% @all_saved_tips.each do |saved_tip| %>
+    <div class="cardtips">
+      <a class="tipsimage" href="#">
+        <i class="fa-solid fa-utensils"></i>
+      </a>
+      <li>
+      <% if saved_tip.class == SavedTip %>
+        <div class="info d-flex justify-content-between">
+          <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
+          <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
+        </div>
+        <p><%= saved_tip.tip.description.truncate(50) %></p>
+      <% else saved_tip.class == SavedUserTip %>
+        <div class="info d-flex justify-content-between">
+          <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
+          <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:'tipsicon mt-2 me-2' do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
+        </div>
+        <p><%= saved_tip.usertip.description.truncate(50) %></p>
       <% end %>
-    </ul>
-
-    <ul>
-        <% @all_saved_tips.each do |saved_tip| %>
-      <div class="cardtips">
-        <a class="tipsimage" href="#">
-          <i class="fa-solid fa-utensils"></i>
-        </a>
-        <li>
-          <div class="info d-flex justify-content-between">
-            <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
-            <% if saved_tip.class == Tip %>
-              <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
-                <i class="fa fa-bookmark"></i>
-              <% end %>
-            <% else saved_tip.class == Usertip %>
-              <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:'tipsicon mt-2 me-2' do %>
-                <i class="fa-regular fa-bookmark"></i>
-              <% end %>
-            <% end %>
-          </div>
-          <p><%= saved_tip.tip.description.truncate(50) %></p>
-        </li>
-      </div>
-
-      <% end %>
-    </ul>
-
+      </li>
+    </div>
+    <% end %>
+  </ul>
 </div>
