--- a/app/assets/stylesheets/challenges/_index.scss
+++ b/app/assets/stylesheets/challenges/_index.scss
@@ -2,3 +2,13 @@
   text-decoration: none;
   color: unset;
 }
+
+.text-new-challenge p {
+  text-align: center;
+  font-size: 17px;
+  margin: 17px 0px 0px;
+}
+
+.challenges {
+  margin-bottom: 90px;
+}
