--- a/app/assets/stylesheets/challenges/_index.scss
+++ b/app/assets/stylesheets/challenges/_index.scss
@@ -8,7 +8,11 @@
   font-size: 17px;
   margin: 17px 0px 0px;
 }
+.text-new-challenge h4 {
+  text-align: center;
+  margin: 17px 0px 0px;
+}
 
 .challenges {
-  margin-bottom: 90px;
+  margin-bottom: 50px;
 }
