--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -1,29 +1,48 @@
-<h1>My challenges</h1>
+<div class="container">
+   <div class="header">
+    <h1>My challenges</h1>
+    <img src="<%= current_user.avatar %>" alt="">
+  </div>
+  <div class="text-new-challenge">
+    <h4><strong>On going challenges</strong></h4>
+  </div>
+  <section class="challenges">
+    <% @on_going_bookings.each do |booking| %>
+        <%= link_to booking_path(booking) do %>
+          <div class="card-challenge">
+            <div class="<%= Challenge.find(booking.challenge_id).category.downcase %>-icon icons">
+              <i class="fa-solid <%= find_icon(Challenge.find(booking.challenge_id).category) %>"></i>
+            </div>
+            <div class="card-challenge-infos">
+              <h4><strong><%= Challenge.find(booking.challenge_id).name %></strong></h4>
+              <p><%= Challenge.find(booking.challenge_id).description.truncate(45) %></p>
+            </div>
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+        <% end %>
+    <% end %>
+  </section>
 
-<h4>On going challenges</h4>
-<ol>
-  <% @on_going_bookings.each do |booking| %>
-    <li>
-      <p><%= Challenge.find(booking.challenge_id).name %></p>
-      <p><%= Challenge.find(booking.challenge_id).category %></p>
-      <p><%= Challenge.find(booking.challenge_id).description %></p>
-      <%= link_to "details", booking_path(booking) %><br>
-    </li>
-  <% end %>
-</ol>
-<br>
+  <div class="text-new-challenge">
+    <h4><strong>Past challenges</strong></h4>
+  </div>
+  <section class="challenges">
+    <% @past_bookings.each do |booking| %>
+        <%= link_to booking_path(booking) do %>
+          <div class="card-challenge">
+            <div class="<%= Challenge.find(booking.challenge_id).category.downcase %>-icon icons">
+              <i class="fa-solid <%= find_icon(Challenge.find(booking.challenge_id).category) %>"></i>
+            </div>
+            <div class="card-challenge-infos">
+              <h4><strong><%= Challenge.find(booking.challenge_id).name %></strong></h4>
+              <p><%= Challenge.find(booking.challenge_id).description.truncate(45) %></p>
+            </div>
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+        <% end %>
+    <% end %>
+  </section>
 
-<h4>Past challenges</h4>
-<ol>
-  <% @past_bookings.each do |booking| %>
-    <li>
-      <p><%= Challenge.find(booking.challenge_id).name %></p>
-      <p><%= Challenge.find(booking.challenge_id).category %></p>
-      <p><%= Challenge.find(booking.challenge_id).description %></p>
-      <%= link_to "details", booking_path(booking) %><br>
-    </li>
-  <% end %>
-</ol>
-<br>
 
-<%= link_to "Add new challenges", challenges_path %>
+  <%= link_to "Add new challenges", challenges_path, class: "btn-grad" %>
+</div>
