home avec illustration

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,16 +18,16 @@
   <div class="under-banner">
     <div class="avatar-home">
       <div class="d-inline-flex flex-column card-home">
-        <p><i class="fa-solid fa-tree"></i></p>
-        <h4><strong>Ecology</strong></h4>
+        <img src="/assets/ecology.svg" alt="ecology" class="home-image">
+        <h5><strong>Ecology</strong></h5>
       </div>
       <div class="d-inline-flex flex-column card-home">
-        <p><i class="fa-sharp fa-solid fa-medal"></i></p>
-        <h4><strong>Challenges</strong></h4>
+        <img src="/assets/challenges.svg" alt="ecology" class="home-image">
+        <h5><strong>Challenges</strong></h5>
       </div>
       <div class="d-inline-flex flex-column card-home">
-        <p><i class="fa-regular fa-lightbulb"></i></p>
-        <h4><strong>Tips</strong></h4>
+        <img src="/assets/tips.svg" alt="ecology" class="home-image">
+        <h5><strong>Tips</strong></h5>
       </div>
     </div>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
