--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   text-align: center;
   margin-top: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 
 .text-banner {
@@ -19,9 +19,21 @@
   margin-right: 15px;
 }
 
-.card-home p {
-  margin-bottom: 0px;
-  font-size: 40px;
+.card-home {
+  width: 100px;
+  background-color: #f9f9f1;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+.home-image {
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+.card-home h5 {
+  margin-bottom: 10px;
+  font-size: smaller;
 }
 
 .carousel-caption p {
