--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -24,7 +24,7 @@
   </section>
 
   <div class="text-new-challenge">
-    <h4><strong>Past challenges</strong></h4>
+    <h4><strong>Completed challenges</strong></h4>
   </div>
   <section class="challenges">
     <% @past_bookings.each do |booking| %>
