--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,7 +21,7 @@
 
 .card-home {
   width: 100px;
-  background-color: #f9f9f1;
+  background-color: white;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
