--- a/app/assets/stylesheets/components/_card_challenge.scss
+++ b/app/assets/stylesheets/components/_card_challenge.scss
@@ -8,13 +8,13 @@
   padding: 10px;
   align-items: center;
   margin-bottom: 20px;
+  height: 120px;
 }
-
 
 .card-challenge-infos {
   margin: 0px;
   text-align: left;
-  padding: 0px 15px;
+  padding: 10px 15px 0px 15px;
 }
 
 .card-challenge i {
