--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -4,7 +4,7 @@
     <img src="<%= current_user.avatar %>" alt="">
   </div>
   <div class="text-new-challenge">
-    <p><strong>Choose one or more challenge for this week</strong></p>
+    <p><strong>Choose one or more challenges for this week</strong></p>
   </div>
   <section class="challenges">
     <% @challenges.each do |challenge| %>
