--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,13 +27,13 @@
 }
 
 .home-image {
-  height: 100px;
+  height: 90px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
 .card-home h5 {
-  margin-bottom: 10px;
+  margin: 10px 0px;
   font-size: smaller;
 }
 
