--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -26,7 +26,7 @@
       </a>
       <li>
       <div class="info d-flex justify-content-between">
-        <h5><strong><p><%= tip.name %></p></strong><br></h5>
+        <h5><strong><%= tip.name %></strong><br></h5>
         <% if current_user.saved_tips.where(tip: tip).empty? %>
           <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
             <i class="fa-regular fa-bookmark"></i>
@@ -53,7 +53,7 @@
         </a>
       <li>
       <div class="info d-flex justify-content-between">
-        <h5><strong><p>Name: <%= tip.name %></p></strong><br></h5>
+        <h5><strong><%= tip.name %></strong><br></h5>
         <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
           <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
             <i class="fa-regular fa-bookmark"></i>
