--- a/app/assets/stylesheets/challenges/_index.scss
+++ b/app/assets/stylesheets/challenges/_index.scss
@@ -5,14 +5,14 @@
 
 .text-new-challenge p {
   text-align: center;
-  font-size: 17px;
+  font-size: 1em;
   margin: 17px 0px 0px;
 }
 .text-new-challenge h4 {
   text-align: center;
-  margin: 17px 0px 0px;
+  margin: 0.7em 0em 0em;
 }
 
 .challenges {
-  margin-bottom: 50px;
+  margin-bottom: 2em;
 }
