--- a/app/assets/stylesheets/components/_card_challenge.scss
+++ b/app/assets/stylesheets/components/_card_challenge.scss
@@ -3,12 +3,12 @@
   background-color: white;
   border-radius: 4px;
   padding: 1em;
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 23px 30px rgba(0, 0, 0, 0.25);
   display: flex;
-  padding: 10px;
+  padding: 3%;
   align-items: center;
-  margin-bottom: 20px;
-  height: 120px;
+  margin-bottom: 6%;
+  height: 36%;
 }
 
 .card-challenge-infos {
