--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,59 +14,45 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="under-banner">
-    <div class="avatar-home">
-      <div class="d-inline-flex flex-column card-home">
-        <img src="/assets/ecology.svg" alt="ecology" class="home-image">
-        <h5><strong>Ecology</strong></h5>
+
+<div class='container'>
+  <div class="home-title">
+    <h1>How it works</h1>
+  </div>
+
+  <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/assets/ecology.svg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-md-block">
+          <h5>Become an eco-citizen</h5>
+        </div>
       </div>
-      <div class="d-inline-flex flex-column card-home">
-        <img src="/assets/challenges.svg" alt="ecology" class="home-image">
-        <h5><strong>Challenges</strong></h5>
+      <div class="carousel-item">
+        <img src="/assets/challenges.svg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-md-block">
+          <h5>Challenge yourself</h5>
+        </div>
       </div>
-      <div class="d-inline-flex flex-column card-home">
-        <img src="/assets/tips.svg" alt="ecology" class="home-image">
-        <h5><strong>Tips</strong></h5>
+      <div class="carousel-item">
+        <img src="/assets/tips.svg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-md-block">
+          <h5>Get dayly tips</h5>
+        </div>
       </div>
     </div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=6" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-md-block">
-            <%# <h5>Ecology</h5> %>
-            <p>Change your habits, for a better world.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="Second-slide">
-          <div class="carousel-caption d-md-block">
-            <%# <h5>You need Challenges</h5> %>
-            <p>You want to be a better human being, come here</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" class="d-block w-100" alt="Third-slide">
-          <div class="carousel-caption ">
-            <%# <h5>Need help</h5> %>
-            <p class="text-center">We have so many tips for you</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 </div>
