cards-profile-tips

--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -43,3 +43,14 @@
 .tipsname {
  font-weight: bold;
 }
+
+.padding-right {
+  padding-right: 1em;
+}
+
+.delete-icon {
+  position: absolute;
+  top: 6em;
+  left: 17em;
+  color: #115549;
+}
