--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -38,7 +38,7 @@
           <% end %>
         <% end %>
       </div>
-      <p><%= tip.description.truncate(50)  %></p>
+      <p class="padding-right"><%= tip.description.truncate(40)  %></p>
       <%# <p>Challenge category: <%= tip.challenge.category  %>
       </li>
     </div>
@@ -65,7 +65,7 @@
           <% end %>
         <% end %>
       </div>
-        <p><%= tip.description.truncate(50)  %></p>
+        <p class="padding-right"><%= tip.description.truncate(40) %></p>
         <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
       </li>
     </div>
